Upgrade the bundled launch4j libraries to a current version which builds with Java 17